# WickedShooter

./: .gitignore  .gitmodules  CMakeLists.txt  TemplateWindows.rc  Template_Windows.vcxproj  Template_Windows.vcxproj.filters  WickedShooter.sln  config.h  icon.c  icon.h  main_MacOS.mm  main_iOS.mm  main_linux.cpp  main_windows.cpp  resource.h
.github/workflows/: build-nightly.yml  build-pr.yml  build.yml
AppIcon.icon/: icon.json
WickedShooter.xcodeproj/: project.pbxproj
